# condor_tensorflow

./: 404.html  CONDOR_TensorFlow_demo.ipynb  LICENSE  README.md  conda_environment.yml  cpu.Dockerfile  docker_bashrc  gpu.Dockerfile  index.html  mkdocs.yml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
.github/workflows/: mkdocs-publish.yml  python-test.yml
CHANGELOG/: index.html
api_modules/condor_tensorflow.labelencoder/BaseEstimator/: index.html
api_modules/condor_tensorflow.labelencoder/CondorOrdinalEncoder/: index.html
api_modules/condor_tensorflow.labelencoder/OrdinalEncoder/: index.html
api_subpackages/condor_tensorflow.activations/: index.html
api_subpackages/condor_tensorflow.labelencoder/: index.html
api_subpackages/condor_tensorflow.loss/: index.html
api_subpackages/condor_tensorflow.metrics/: index.html
citing/: index.html
docs/: CHANGELOG.md  CONDOR_TensorFlow_demo.ipynb  citing.md  index.md  installation.md  license.md
docs/api_modules/condor_tensorflow.loss/: ordinal_loss.md  (+6 more)
docs/api_subpackages/: condor_tensorflow.activations.md  condor_tensorflow.labelencoder.md  condor_tensorflow.loss.md  condor_tensorflow.metrics.md
docs/tutorials/: amazon.md  mnist.md  poker.md
installation/: index.html
license/: index.html
search/: search_index.json
src/condor_tensorflow/: __init__.py  activations.py  labelencoder.py  loss.py  metrics.py
tests/: test_activations.py  test_labelencoder.py  test_loss.py  test_metrics.py
tutorials/amazon/: index.html
tutorials/mnist/: index.html
tutorials/poker/: index.html
(+21 files in other folders)
