[metadata]
name = condor_tensorflow
version = 0.0.1
author = Garrett Jenkinson
author_email = Jenkinson.William@mayo.edu
description = A tensorflow implementation of Conditionals for Ordinal Regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GarrettJenkinson/condor_tensorflow
project_urls =
    Bug Tracker = https://github.com/GarrettJenkinson/condor_tensorflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

